// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders as primary button 1`] = `
.c0 {
  background: palevioletred;
  color: white;
  font-size: 1em;
  padding: 0.25em 1em;
  border: 2px solid palevioletred;
  border-radius: 3px;
  cursor: pointer;
  -webkit-transition: 0.3s all;
  transition: 0.3s all;
}

.c0:hover {
  background: white;
  color: palevioletred;
}

<button
  className="c0"
/>
`;

exports[`Button renders children 1`] = `
.c0 {
  background: white;
  color: palevioletred;
  font-size: 1em;
  padding: 0.25em 1em;
  border: 2px solid palevioletred;
  border-radius: 3px;
  cursor: pointer;
  -webkit-transition: 0.3s all;
  transition: 0.3s all;
}

.c0:hover {
  color: palevioletred;
}

<button
  className="c0"
>
  <span>
    test
  </span>
</button>
`;

exports[`Button renders without props 1`] = `
.c0 {
  background: white;
  color: palevioletred;
  font-size: 1em;
  padding: 0.25em 1em;
  border: 2px solid palevioletred;
  border-radius: 3px;
  cursor: pointer;
  -webkit-transition: 0.3s all;
  transition: 0.3s all;
}

.c0:hover {
  color: palevioletred;
}

<button
  className="c0"
/>
`;
